--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "^4.17.1",
     "in_array": "^1.1.0",
     "moment-timezone": "^0.5.34",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
     "nanoid": "^3.1.7",
     "randomstring": "^1.1.5",
     "reverse-dns-lookup": "^2.0.0",
