--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "capitalize": "^2.0.3",
     "express": "^4.17.1",
     "in_array": "^1.1.0",
+    "jest": "^29.6.1",
     "moment-timezone": "^0.5.34",
     "mysql2": "^3.2.0",
     "nanoid": "^3.1.7",
@@ -29,7 +30,14 @@
     "source-map-support": "^0.5.21",
     "stripe": "^8.55.0",
     "toml": "^3.0.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.9.3",
     "ws": "^7.2.5"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/jest": "^29.5.3",
+    "ts-node": "^10.9.1"
   }
 }
