--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc -p ./",
     "watch": "tsc -p ./ -w",
+    "test": "jest",
     "start": "npm run watch & nodemon dist/srv/index.js",
     "start-prod": "node dist/srv/index.js"
   },
