Build before running tests so you don't need to do it manually

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc -p ./",
     "watch": "tsc -p ./ -w",
-    "test": "jest",
+    "test": "npm run build && jest",
     "start": "npm run watch & nodemon dist/srv/index.js",
     "start-prod": "node dist/srv/index.js"
   },
