Specify whether API key auth is required

--- a/config-instance.example.toml
+++ b/config-instance.example.toml
@@ -26,6 +26,9 @@ bannedHostnames = [
     'evil.com'
 ]
 
+# Specify whether connections need API key
+authorizationRequired = true
+
 ###
 # MySQL is used for Logging wnen it is enabled
 ###
